<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sebasku.networks.activity.ProfilPerusahaanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_foto"
            android:layout_width="@dimen/width_menu_ava"
            android:layout_height="@dimen/width_menu_ava"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_profilPerusahaan_ava"
            android:src="@drawable/ic_user"
            app:civ_border_color="@color/colorPrimary"
            app:civ_border_width="@dimen/cardview_default_radius" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="PT.Creativa Gemilang"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_profilPerusahaan_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_profilPerusahaan_card">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/profil"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/textSize_profilPerusahaan_tvJudul" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isi_profil" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_profilPerusahaan_card">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_profilPerusahaan_card">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/peraturan"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/textSize_profilPerusahaan_tvJudul" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/isi_peraturan" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
